--- a/index.html
+++ b/index.html
@@ -6,31 +6,33 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="css/stile_index.css">
   <meta charset="utf-8" />
-  
+
   <style>
-	
-		#sfondo{
-			background-image:url('sfondo.jpg');
-			background-repeat:no-repeat;
-			background-size: 100%;
-		
-		}
-		
+
+  #sfondo {
+    width: 100%; height: 100%; top: 0; left: 0;
+    background: url(sfondo.jpg) no-repeat center top; position: fixed; z-index: -1;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
 		small{
 			color:white;
 			position: fixed;
 			width: 50%;
 			bottom: 10px;
 		}
-		
+
 		h2,p,h1{
 			color: white;
 		}
-	
-	
+
+
 	</style>
-  
-  
+
+
 </head>
 
 <body id='sfondo'>
@@ -50,7 +52,7 @@
   <div style="padding-left:16px">
     <!--Scritte sotto il menu qua nella pagina principale-->
     <h2>Qualcosa</h2>
-	
+
   </div>
 
   <!--Funzioni Javascript-->
