--- a/networking/index.html
+++ b/networking/index.html
@@ -7,41 +7,43 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="../css/stile_networking.css">
 	<link rel="canonical" href="index.html" />
-	
+
 	<style>
-	
-		#sfondo{
-			background-image:url('sfondo.jpg');
-			background-repeat:no-repeat;
-			background-size: 100%;
-		
-		}
-		
+
+  #sfondo {
+    width: 100%; height: 100%; top: 0; left: 0;
+    background: url(sfondo.jpg) no-repeat center top; position: fixed; z-index: -1;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
 		small{
 			color:white;
 			position: fixed;
 			width: 50%;
 			bottom: 10px;
 		}
-	
-	
+
+
 	</style>
-	
-	
-	
-	
-	
+
+
+
+
+
     </head>
     <body id='sfondo'>
-		
+
       <div class="topnav" id="myTopnav">
         <!--Questo è il menu responsive-->
 			<a href='index.html' class="active">Networking</a>
     		<a href='Cisco/'>Cisco teoria</a>
 			<a href='esercizi_subnetting/'>Esercizi Subnetting</a>
 			<a href='esercizi_acl/'>Esercizi ACL</a>
-			
-			
+
+
 
 
         <a href="javascript:void(0);" class="icon" onclick="responsiveMenu()">
@@ -50,7 +52,7 @@
       </div>
 
 
-		
+
 <small >Copyright 2019. All rights reserved</small>
 
 <!--Funzioni Javascript-->
