Riorganizzata la struttura del sito

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
   <div class="topnav" id="myTopnav">
     <!--Questo è il menu responsive-->
     <a href="#home" class="active">Home</a>
-    <a href="cpp.html">C++</a>
+    <a href="programmazione/cpp.html">C++</a>
     <a href="networking/">Networking</a>
-    <a href="java.html">Java</a>
-    <a href="files/">Files</a>
+    <a href="programmazione/java.html">Java</a>
+    <a href="privato/">Private</a>
     <a href="javascript:void(0);" class="icon" onclick="responsiveMenu()">
       <i class="fa fa-bars"></i>
     </a>
