--- a/programmazione/cpp.html
+++ b/programmazione/cpp.html
@@ -4,8 +4,8 @@
 	<title>Esercizi C++</title>
 	<meta charset="UTF-8">
 	<meta http-equiv="Content-type" content="text/html; charset=UTF-8">
-	<link rel="stylesheet" type="text/css" href="css/cpp.css"> <!-- Stili CSS per la pagina in generale-->
-	<link rel="stylesheet" href="css/styles.css"> <!-- Stili CSS per il menu -->
+	<link rel="stylesheet" type="text/css" href="../css/cpp.css"> <!-- Stili CSS per la pagina in generale-->
+	<link rel="stylesheet" href="../css/styles.css"> <!-- Stili CSS per il menu -->
 </head>
 
 <body class="topnav">
