--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <a href="programmazione/cpp.html">C++</a>
     <a href="networking/">Networking</a>
     <a href="programmazione/java.html">Java</a>
-    <a href="privato/">Private</a>
+    <a href="">Private</a>		<!-- DA INSERIRE LINK DEL SITO PRIVATO -->
     <a href="javascript:void(0);" class="icon" onclick="responsiveMenu()">
       <i class="fa fa-bars"></i>
     </a>
